--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 spring.application.name=shop
+spring.profiles.active=local
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.liquibase.enabled = true
+spring.liquibase.enabled=true
