--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=shop
 spring.profiles.active=local
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
+app.scheduling.enabled = false
+app.scheduling.period = 30000
