--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
 app.scheduling.enabled = false
 app.scheduling.period = 30000
+server.port=8080
