--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
-databaseChangeLog: #параметр в котором находятся миграции
-  - include: # список активных миграций
-      file: db/changelog/changeset/create-author-table.yaml # путь к файлу миграции
+databaseChangeLog:
+  - include:
+      file: db/changelog/changeset/create-base-table.yaml
+  - include:
+      file: db/changelog/changeset/add-is-available.yaml
